select corner script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.c": "bat",
         "array": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "ios": "cpp"
     }
 }
