--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 add_executable(main Code/main.cpp)
 add_executable(getIAC Code/getIAC.cpp)
+add_executable(corners Code/corners.cpp)
 
 target_link_libraries( main ${OpenCV_LIBS} )
 target_link_libraries( getIAC ${OpenCV_LIBS} )
+target_link_libraries( corners ${OpenCV_LIBS} )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
