--- a/.gitignore
+++ b/.gitignore
@@ -470,6 +470,7 @@ _deps
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,visualstudio,c++
 
 # Additional instructions strictly required for IACV project
+build/**/*
 **/.vs
 **/*.sln
 **/*.vcxproj
