--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-# ops :( tanto è salvato nelle commit se ti serve ancora quello di prima, ho dovuto fare cleaning per pusharti la cartella venv di PyCharm che altrimenti non me la dava
+.idea
